--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<div class="header">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <title>CodeCaliper Video Player</title>
+  </head>
   <h1>CodeCaliper Video Player</h1>
-</div>
-<iframe width="1500" height="800" src="//ok.ru/videoembed/3564754116254" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+  <body>
+    <iframe height=500 width=50% src="//ok.ru/videoembed/3564754116254" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+
+    <iframe frameborder=0 height=500 width=50% src="http://weakstreams.com/streams/79722" allowfullscreen scrolling=no allowtransparency></iframe>
+    
+  </body>
+</html>
